--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
+	"homepage": "https://praesidi.github.io/memory-card",
 	"devDependencies": {
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
@@ -32,6 +35,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"gh-pages": "^5.0.0",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"tailwindcss": "^3.3.2",
